--- a/web/index.html
+++ b/web/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <script>
-    // WARNING: DO NOT set the <base href> like this in production!
+	<script>
+	// WARNING: DO NOT set the <base href> like this in production!
     // Details: https://webdev.dartlang.org/angular/guide/router
     (function () {
       var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
@@ -11,17 +11,21 @@
     }());
   </script>
 
-  <title>Hello Angular</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+	<title>Hello Angular</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" href="favicon.png">
 
-  <script defer src="main.dart.js"></script>
+	<script defer src="main.dart.js"></script>
+	<!-- Added Roboto Fonts as required by Material Docs -->
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+	<!-- Added Material Icons -->
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
 </body>
 
 </html>
