--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="favicon.png">
-
+	<!-- Firebase Package -->
+	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-firestore.js"></script>
 	<script defer src="main.dart.js"></script>
 	<!-- Added Roboto Fonts as required by Material Docs -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
